--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,36 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>JefeFiltro</filter-name>
+        <filter-class>filtro.JefeFiltro</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>JefeFiltro</filter-name>
+        <url-pattern>/faces/jefe/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>SeniorFiltro</filter-name>
+        <filter-class>filtro.SeniorFiltro</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SeniorFiltro</filter-name>
+        <url-pattern>/faces/senior/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>JuniorFiltro</filter-name>
+        <filter-class>filtro.JuniorFiltro</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>JuniorFiltro</filter-name>
+        <url-pattern>/faces/junior/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>IndexFiltro</filter-name>
+        <filter-class>filtro.IndexFiltro</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>IndexFiltro</filter-name>
+        <url-pattern>/faces/index.xhtml</url-pattern>
+    </filter-mapping>
 </web-app>
