--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-codec-1.10.jar=commons-codec-1.10.jar
 file.reference.jxl-2.6.12.jar=jxl-2.6.12.jar
-file.reference.primefaces-5.3.jar=primefaces-5.3.jar
+file.reference.primefaces-6.0.jar=primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,9 +47,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.primefaces-5.3.jar}:\
     ${file.reference.jxl-2.6.12.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.primefaces-6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
