agregado un tema

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ excludes=
 file.reference.commons-codec-1.10.jar=commons-codec-1.10.jar
 file.reference.jxl-2.6.12.jar=jxl-2.6.12.jar
 file.reference.primefaces-6.0.jar=primefaces-6.0.jar
+file.reference.smoothness-1.0.10.jar=smoothness-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -49,7 +50,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jxl-2.6.12.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.primefaces-6.0.jar}
+    ${file.reference.primefaces-6.0.jar}:\
+    ${file.reference.smoothness-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
