Creación de Reporte de Colaboraciones.
Pendiente la posibilidad de descargarlo en .pdf y en .xls

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,8 @@ javac.classpath=\
     ${file.reference.jxl-2.6.12.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.primefaces-6.0.jar}:\
-    ${file.reference.smoothness-1.0.10.jar}
+    ${file.reference.smoothness-1.0.10.jar}:\
+    ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
