cambiado el nombre de la libreria jasper report

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,7 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.smoothness-1.0.10.jar}:\
-    ${libs.MyLibrary.classpath}
+    ${libs.JasperReports_6.2.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
